syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.demo.project.grpc";
option java_outer_classname = "JsonIngestorProto";

service JsonIngestor {
  rpc IngestJson (IngestJsonRequest) returns (IngestJsonResponse);
}

message IngestJsonRequest {
  bytes json_payload = 1;
}

message IngestJsonResponse {
  string status = 1;
  string message = 2;
} 